--- a/style.css
+++ b/style.css
@@ -1,50 +1,183 @@
-body {
-    font-family: Arial, sans-serif;
+* {
     margin: 0;
     padding: 0;
-    background-color: #121212;
-    color: #f0f0f0;
-}
-
-header {
-    background-color: #1a1a1a;
-    padding: 20px;
-    text-align: center;
-}
-
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 10px;
-}
-
-nav ul li a {
-    color: #f0f0f0;
+    box-sizing: border-box;
     text-decoration: none;
-}
-
-section {
-    padding: 20px;
-    text-align: center;
-}
-
-section h2 {
-    border-bottom: 2px solid #f0f0f0;
-    display: inline-block;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
-}
-
-footer {
-    background-color: #1a1a1a;
-    padding: 10px;
-    text-align: center;
-    position: fixed;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
+  }
+  html {
+    font-size: 60%;
+    overflow-x: hidden;
+  }
+  :root {
+    --bg-color: #080808;
+    --second-bg-color: #001005;
+    --text-color: white;
+    --main-color: #ff3300;
+  }
+  
+  body {
+    background: var(--bg-color);
+    color: var(--text-color);
+  }
+  
+  
+  .header{
+    position:fixed;
     width: 100%;
-    bottom: 0;
-}
+    top:0;
+    left:0;
+    padding: 4rem 12%;
+    background-color: rgb(0, 0, 0,.3);
+    backdrop-filter: blur(10px);
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    z-index: 100;
+  }
+  
+  #menu-icon{
+    font-size: 3.6rem;
+    color:var(--main-color);
+    display:none
+  }
+  .logo{
+    font-size: 3rem;
+    color: var(--text-color);
+    font-weight:800;
+    cursor:pointer;
+    transition: 0.3s ease;
+  }
+  
+  .logo:hover{
+    transform: scale(1.1)
+  }
+  span{
+    color: var(--main-color);
+  }
+  
+  .navbar a{
+    font-size:1.8rem;
+    color:var(--text-color);
+    margin-left: 4rem;
+    font-weight: 500;
+    border-bottom: 3px solid transparent;
+    transition: 0.3s ease;
+  }
+  
+  .navbar a:hover{
+    border-bottom: 3px solid var(--main-color);
+    color: var(--main-color);
+  }
+  
+  section{
+    min-height: 100vh;
+    padding: 10rem 12%
+  }
+  
+  .home{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap:15rem;
+  
+  }
+  .home-content{
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    text-align: left;
+    width:fit-content
+  }
+  .home-content h1{
+    font-size: 5rem;
+    font-weight: 700;
+    margin-top: 1.5rem;
+    line-height: 1;
+  }
+  
+  .home-content h3{
+    font-size: 3rem;
+    margin: 1rem 0;
+  }
+  
+  .home-content p{
+    width:fit-content;
+    word-wrap: break-word;
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.8;
+  }
+  .home-img img{
+    width: 32vw;
+    border-radius: 50%;
+    box-shadow: 0 0 25px var(--main-color);
+    transition: 0.4s ease-in-out
+  }
+  
+  .home-img img:hover{
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color),
+                0 0 100px var(--main-color)
+  
+  }
+  
+  .social-icon a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    padding: 1rem;
+    background: transparent;
+    border: 2px solid var(--main-color);
+    border-radius: 50%;
+    color: var(--main-color);
+    margin: 3rem 0.5rem;
+    transition: 0.3s ease;
+  }
+  
+  .social-icon a:hover{
+    color:var(--text-color);
+    background-color: var(--main-color);
+    transform: scale(1.2)translateY(-5px);
+    box-shadow: 0 0 25px var(--main-color)
+  }
+  
+  .btn-group{
+    display: flex;
+    gap: 1.5rem;
+  }
+  
+  .btn{
+    display: inline-block;
+    padding: 1rem 3rem;
+    background-color: var(--main-color);
+    box-shadow: 0 0 25px transparent;
+    border-radius: 3rem;
+    font-size: 1.8rem;
+    color: black;
+    border: 2px solid transparent;
+    font-weight: 600;
+    transition: 0.3s ease-in-out
+  }
+  
+  .btn:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color)
+  }
+  
+  .btn-group a:nth-of-type(2){
+    background-color: black;
+    color: var(--main-color);
+    border: 2px solid var(--maincolor);
+    box-shadow: 0 0 25px transparent
+  }
+  .btn-group a:nth-of-type(2):hover{
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
+    color:black;
+  }
